; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-pretty-print.c_test_cat_files.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-pretty-print.c_test_cat_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"/no/such/file\00", align 1
@ENOENT = common dso_local global i32 0, align 4
@CAT_FLAGS_MAIN_FILE_OPTIONAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"/etc/fstab\00", align 1
@R_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_cat_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_cat_files() #0 {
  %1 = call i32 @cat_files(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32* null, i32 0)
  %2 = load i32, i32* @ENOENT, align 4
  %3 = sub nsw i32 0, %2
  %4 = icmp eq i32 %1, %3
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert_se(i32 %5)
  %7 = load i32, i32* @CAT_FLAGS_MAIN_FILE_OPTIONAL, align 4
  %8 = call i32 @cat_files(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32* null, i32 %7)
  %9 = icmp eq i32 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert_se(i32 %10)
  %12 = load i32, i32* @R_OK, align 4
  %13 = call i64 @access(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %12)
  %14 = icmp sge i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %0
  %16 = call i32* @STRV_MAKE(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %17 = call i32 @cat_files(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32* %16, i32 0)
  %18 = icmp eq i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert_se(i32 %19)
  br label %21

21:                                               ; preds = %15, %0
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @cat_files(i8*, i32*, i32) #1

declare dso_local i64 @access(i8*, i32) #1

declare dso_local i32* @STRV_MAKE(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
